feat: regenerate member credentials
